# jito-tip-router

./: .dockerignore  .gitignore  .gitmodules  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yaml  fetch_switchboard_accounts.sh  format.sh  package.json  pipe_test_output.sh  rust-toolchain.toml  rustfmt.toml
.cargo/: audit.toml  config.toml  programs.env
.config/: nextest.toml
.github/workflows/: ci.yaml  release.yaml  (+2 more)
alert-templates/: claims-progress.json  merkle-root-monitoring-plan.md
cli/: .gitignore  Cargo.toml  Dockerfile  README.md  getting_started.md  test.csv
cli/examples/: get_tip_distribution_accounts_to_migrate.rs
cli/src/: args.rs  cli_args.rs  getters.rs  handler.rs  instructions.rs  lib.rs  log.rs  spl_stake_pool.rs  tip_router.rs  tip_router_handler.rs  utils.rs  vault_instruction_abi.rs
cli/src/keeper/: keeper.rs  keeper_loop.rs  keeper_metrics.rs  keeper_state.rs  mod.rs
core/: Cargo.toml
core/src/: account_payer.rs  ballot_box.rs  base_fee_group.rs  base_reward_router.rs  claim_status_payer.rs  config.rs  constants.rs  discriminators.rs  epoch_reward_router.rs  epoch_snapshot.rs  epoch_state.rs  error.rs  fees.rs  instruction.rs  lib.rs  loaders.rs  mint_entry_serde.rs  ncn_config.rs  ncn_fee_group.rs  ncn_reward_router.rs  operator_epoch_reward_router.rs  operator_reward_router.rs  reward_router.rs  rewards.rs  sol_router.rs  spl_stake_pool.rs  stake_weight.rs  state.rs  tracked_mints.rs  tracked_st_mints.rs  utils.rs  vault_registry.rs  weight_entry.rs  weight_table.rs
docs/: _config.yaml  index.md
gcp_uploader/: Cargo.toml  monitor-merkle-uploads.service
gcp_uploader/src/: main.rs
idl/: jito_tip_router.json
integration_tests/: Cargo.toml
integration_tests/tests/: tests.rs
integration_tests/tests/bpf/: set_merkle_root.rs
integration_tests/tests/fixtures/: generated_switchboard_accounts.rs  mod.rs  priority_fee_distribution_client.rs  restaking_client.rs  spl_stake_pool.rs  stake_pool_client.rs  test_builder.rs  tip_distribution_client.rs  tip_router_client.rs  vault_client.rs
integration_tests/tests/tip_router/: admin_set_parameters.rs  cast_vote.rs  distribute_rewards.rs  epoch_state.rs  initialize_ballot_box.rs  initialize_base_reward_router.rs  initialize_config.rs  initialize_epoch_snapshot.rs  initialize_ncn_reward_router.rs  initialize_operator_snapshot.rs  initialize_tracked_mints.rs  initialize_vault_operator_delegation_snapshot.rs  initialize_vault_registry.rs  initialize_weight_table.rs  meta_tests.rs  mod.rs  register_mint.rs  register_vault.rs  restaking_variations.rs  set_config_fees.rs  set_jto_weight.rs  set_new_admin.rs  set_tie_breaker.rs  set_tracked_mint_ncn_fee_group.rs  simulation_tests.rs  snapshot_vault_operator_delegation.rs  switchboard_set_weight.rs
integration_tests/tests/tip_router/bpf/: mod.rs  set_merkle_root.rs  set_priority_fee_merkle_root.rs
meta_merkle_tree/: Cargo.toml
meta_merkle_tree/src/: generated_merkle_tree.rs  lib.rs  merkle_tree.rs  meta_merkle_tree.rs  tree_node.rs  utils.rs  verify.rs  wincode_schema.rs
priority_fee_distribution_sdk/: Cargo.toml
priority_fee_distribution_sdk/idls/: jito_priority_fee_distribution.json
priority_fee_distribution_sdk/src/: instruction.rs  lib.rs
program/: Cargo.toml
program/src/: admin_initialize_config.rs  admin_register_st_mint.rs  admin_set_config_fees.rs  admin_set_new_admin.rs  admin_set_parameters.rs  admin_set_registered_st_mint.rs  admin_set_st_mint.rs  admin_set_tie_breaker.rs  admin_set_weight.rs  admin_update_weight_table.rs  cast_vote.rs  claim_with_payer.rs  claim_with_payer_priority_fee.rs  close_epoch_account.rs  distribute_base_ncn_reward_route.rs  distribute_base_rewards.rs  distribute_dao_rewards.rs  distribute_ncn_operator_rewards.rs  distribute_ncn_routes.rs  distribute_ncn_vault_rewards.rs  distribute_rewards.rs  initialize_ballot_box.rs  initialize_base_reward_router.rs  initialize_claim_status_payer.rs  initialize_epoch_reward_router.rs  initialize_epoch_snapshot.rs  initialize_epoch_state.rs  initialize_ncn_config.rs  initialize_ncn_reward_router.rs  initialize_operator_epoch_reward_router.rs  initialize_operator_snapshot.rs  initialize_tracked_mints.rs  initialize_vault_operator_delegation_snapshot.rs  initialize_vault_registry.rs  initialize_weight_table.rs  lib.rs  process_epoch_reward_buckets.rs  process_epoch_reward_pool.rs  process_operator_epoch_reward_pool.rs  realloc_ballot_box.rs  (+19 more)
scripts/: generate-clients.js
shank_cli/: Cargo.toml
stake_meta_types/: Cargo.toml
stake_meta_types/src/: lib.rs
telegraf/: telegraf.conf
temp/: jito_tip_router_program-keypair.json
tip-router-operator-cli/: .env.example  Cargo.toml  Dockerfile  README.md
tip-router-operator-cli/examples/: get_claim_transactions_for_valid_unclaimed.rs  get_tip_distribution_accounts_to_upload.rs
tip-router-operator-cli/scripts/: setup-local-validators.sh  setup-test-ledger.sh
tip-router-operator-cli/src/: account_analyzer.rs  arg_matches.rs  backup_snapshots.rs  case_vote.rs  catchup.rs  claim.rs  claim_mev_workflow.rs  cli.rs  distribution_meta.rs  distribution_wrapper.rs  epoch_percentage.rs  error.rs  ledger_utils.rs  lib.rs  load_and_process_ledger.rs  main.rs  merkle_root_generator_workflow.rs  merkle_root_upload_workflow.rs  merkle_tree.rs  meta_merkle_tree.rs  priority_fee_utils.rs  priority_fees.rs  process_epoch.rs  reclaim.rs  reclaim_rent_workflow.rs  restaking.rs  rpc_utils.rs  snapshot.rs  solana_cli.rs  stake_meta.rs  stake_meta_generator.rs  stake_meta_generator_workflow.rs  submit.rs  tests.rs  tip_distribution_stats.rs  tip_router.rs  tx_utils.rs
tip-router-operator-cli/src/claim/: claim_processor.rs
tip-router-operator-cli/test-ledger/rocksdb/: 000056.sst  IDENTITY  LOG  LOG.old.1733856020838338  MANIFEST-000058
tip-router-operator-cli/tests/: integration_tests.rs  snapshot_creator.rs
tip_distribution_sdk/: Cargo.toml
tip_distribution_sdk/idls/: jito_tip_distribution.json
tip_distribution_sdk/src/: instruction.rs  lib.rs
tip_payment_sdk/: Cargo.toml
tip_payment_sdk/src/: lib.rs
(+148 files in other folders)
