[workspace]
members = [
    "cli",
    "clients/rust/jito_tip_router",
    "core",
    "gcp_uploader",
    "integration_tests",
    "program",
    "shank_cli",
    "tip-router-operator-cli",
    "tip_distribution_sdk",
    "tip_payment_sdk",
]

resolver = "2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

[workspace.package]
version = "0.0.1"
authors = ["Jito Network Maintainers <support@jito.network>"]
repository = "https://github.com/jito-foundation/jito-tip-router"
homepage = "https://jito.network/"
license = "MIT OR Apache-2.0"
edition = "2021"
readme = "README.md"

[workspace.dependencies]
anchor-lang = "0.31.1"
anyhow = "1.0.86"
assert_matches = "1.5.0"
base64 = "0.22.1"
borsh = { version = "0.10.3" }
bytemuck = { version = "1.16.3", features = ["min_const_generics"] }
cfg-if = "1.0.0"
chrono = "0.4.38"
clap = { version = "4.5.16", features = ["derive", "env", "cargo"] }
clap_old = { package = "clap", version = "2.33.1" }
clap-markdown = { version = "0.1.4" }
const_str_to_pubkey = "0.2.0"
dotenv = "0.15.0"
envfile = "0.2.1"
env_logger = "0.10.2"
fast-math = "0.1"
futures = "0.3.21"
getrandom = { version = "0.1.16", features = ["custom"] }
hex = "0.4.3"
home = "=0.5.9" # Custom for compatibility with rust 1.75
log = "0.4.22"
matches = "0.1.10"
num-derive = "0.4.2"
num-traits = "0.2.19"
proc-macro2 = "1.0.86"
quote = "1.0.36"
rand = "0.8.5"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "1.0.102"
serde_with = "3.9.0"
serde-big-array = "0.5.1"
shank = "0.4.2"
shank_idl = "0.4.2"
spl-math = { version = "0.3.0", features = ["no-entrypoint"] }
spl-memo = "6.0.0"
solana-account-decoder = { package = "solana-account-decoder", git = "https://github.com/exo-tech-xyz/jito-solana", branch = "tj/v2.2.15-cache-logs" }
solana-metrics = { package = "solana-metrics", git = "https://github.com/exo-tech-xyz/jito-solana", branch = "tj/v2.2.15-cache-logs" }
solana-accounts-db = { package = "solana-accounts-db", git = "https://github.com/exo-tech-xyz/jito-solana", branch = "tj/v2.2.15-cache-logs" }
solana-clap-utils = { package = "solana-clap-utils", git = "https://github.com/exo-tech-xyz/jito-solana", branch = "tj/v2.2.15-cache-logs" }
solana-cli-config = { package = "solana-cli-config", git = "https://github.com/exo-tech-xyz/jito-solana", branch = "tj/v2.2.15-cache-logs" }
solana-client = { package = "solana-client", git = "https://github.com/exo-tech-xyz/jito-solana", branch = "tj/v2.2.15-cache-logs" }
solana-core = { package = "solana-core", git = "https://github.com/exo-tech-xyz/jito-solana", branch = "tj/v2.2.15-cache-logs" }
solana-geyser-plugin-manager = { package = "solana-geyser-plugin-manager", git = "https://github.com/exo-tech-xyz/jito-solana", branch = "tj/v2.2.15-cache-logs" }
solana-gossip = { package = "solana-gossip", git = "https://github.com/exo-tech-xyz/jito-solana", branch = "tj/v2.2.15-cache-logs" }
solana-measure = { git = "https://github.com/exo-tech-xyz/jito-solana", branch = "tj/v2.2.15-cache-logs" }
solana-ledger = { package = "solana-ledger", git = "https://github.com/exo-tech-xyz/jito-solana", branch = "tj/v2.2.15-cache-logs" }
solana-program = { version = "2.2.1", default-features = false }
solana-transaction-status = { package = "solana-transaction-status", git = "https://github.com/exo-tech-xyz/jito-solana", branch = "tj/v2.2.15-cache-logs" }
solana-program-test = { package = "solana-program-test", git = "https://github.com/exo-tech-xyz/jito-solana", branch = "tj/v2.2.15-cache-logs" }
solana-rpc-client = { package = "solana-rpc-client", git = "https://github.com/exo-tech-xyz/jito-solana", branch = "tj/v2.2.15-cache-logs" }
solana-rpc = { git = "https://github.com/exo-tech-xyz/jito-solana", branch = "tj/v2.2.15-cache-logs" }
solana-rpc-client-api = { git = "https://github.com/exo-tech-xyz/jito-solana", branch = "tj/v2.2.15-cache-logs" }
solana-runtime = { package = "solana-runtime", git = "https://github.com/exo-tech-xyz/jito-solana", branch = "tj/v2.2.15-cache-logs" }
solana-streamer = { git = "https://github.com/exo-tech-xyz/jito-solana", branch = "tj/v2.2.15-cache-logs" }
solana-sdk = "=2.2.2"
solana-clock = "=2.2.1"
solana-stake-program = { package = "solana-stake-program", git = "https://github.com/exo-tech-xyz/jito-solana", branch = "tj/v2.2.15-cache-logs" }
solana-vote = { package = "solana-vote", git = "https://github.com/exo-tech-xyz/jito-solana", branch = "tj/v2.2.15-cache-logs" }
solana-unified-scheduler-pool = { package = "solana-unified-scheduler-pool", git = "https://github.com/exo-tech-xyz/jito-solana", branch = "tj/v2.2.15-cache-logs" }
solana-zk-sdk = { package = "solana-zk-sdk", git = "https://github.com/exo-tech-xyz/jito-solana", branch = "tj/v2.2.15-cache-logs" }
solana-zk-token-sdk = { package = "solana-zk-token-sdk", git = "https://github.com/exo-tech-xyz/jito-solana", branch = "tj/v2.2.15-cache-logs" }
solana-instruction = { package = "solana-instruction", git = "https://github.com/exo-tech-xyz/jito-solana", branch = "tj/v2.2.15-cache-logs" }
solana-program-error = "=2.2.1"
solana-pubkey = { package = "solana-pubkey", git = "https://github.com/exo-tech-xyz/jito-solana", branch = "tj/v2.2.15-cache-logs" }
solana-account-info = { package = "solana-account-info", git = "https://github.com/exo-tech-xyz/jito-solana", branch = "tj/v2.2.15-cache-logs" }
solana-program-entrypoint = "2.2.1"
solana-decode-error = "=2.2.1"
solana-security-txt = "1.1.1"
spl-associated-token-account = { version = "6.0.0", features = ["no-entrypoint"] }
spl-stake-pool = { version = "2.0.1", features = ["no-entrypoint"] }
spl-token = { version = "7.0.0", features = ["no-entrypoint"] }
spl-token-2022 = { version = "=7.0.0", features = ["no-entrypoint"] }
switchboard-on-demand = "0.3.4"
syn = "2.0.72"
thiserror = "1.0.57"
tokio = { version = "1.36.0", features = ["full"] }
meta-merkle-tree = { path = "./meta_merkle_tree", version = "=0.0.1" }
jito-tip-distribution-sdk = { path = "./tip_distribution_sdk", version = "=0.0.1" }
jito-tip-payment-sdk = { path = "./tip_payment_sdk", version = "=0.0.1" }
jito-tip-router-client = { path = "./clients/rust/jito_tip_router", version = "0.0.1" }
jito-tip-router-core = { path = "./core", version = "=0.0.1" }
jito-tip-router-program = { path = "./program", version = "=0.0.1" }
jito-tip-router-shank-cli = { path = "./shank_cli", version = "=0.0.1" }
jito-bytemuck = { package = "jito-bytemuck", git = "https://github.com/jito-foundation/restaking", branch = "v2.2-upgrade" }
jito-account-traits-derive = { package = "jito-account-traits-derive", git = "https://github.com/jito-foundation/restaking", branch = "v2.2-upgrade" }
jito-jsm-core = { package = "jito-jsm-core", git = "https://github.com/jito-foundation/restaking", branch = "v2.2-upgrade" }
jito-restaking-client = { package = "jito-restaking-client", git = "https://github.com/jito-foundation/restaking", branch = "v2.2-upgrade" }
jito-restaking-core = { package = "jito-restaking-core", git = "https://github.com/jito-foundation/restaking", branch = "v2.2-upgrade" }
jito-restaking-program = { package = "jito-restaking-program", git = "https://github.com/jito-foundation/restaking", branch = "v2.2-upgrade", features = ["no-entrypoint"] }
jito-restaking-sdk = { package = "jito-restaking-sdk", git = "https://github.com/jito-foundation/restaking", branch = "v2.2-upgrade" }
jito-vault-client = { package = "jito-vault-client", git = "https://github.com/jito-foundation/restaking", branch = "v2.2-upgrade" }
jito-vault-core = { package = "jito-vault-core", git = "https://github.com/jito-foundation/restaking", branch = "v2.2-upgrade" }
jito-vault-program = { package = "jito-vault-program", git = "https://github.com/jito-foundation/restaking", branch = "v2.2-upgrade", features = ["no-entrypoint"] }
jito-vault-sdk = { package = "jito-vault-sdk", git = "https://github.com/jito-foundation/restaking", branch = "v2.2-upgrade" }

[patch.crates-io]
solana-account-decoder = { package = "solana-account-decoder", git = "https://github.com/exo-tech-xyz/jito-solana", branch = "tj/v2.2.15-cache-logs" }
solana-account-decoder-client-types = { package = "solana-account-decoder-client-types", git = "https://github.com/exo-tech-xyz/jito-solana", branch = "tj/v2.2.15-cache-logs" }
solana-accounts-db = { package = "solana-accounts-db", git = "https://github.com/exo-tech-xyz/jito-solana", branch = "tj/v2.2.15-cache-logs" }
solana-address-lookup-table-program = { package = "solana-address-lookup-table-program", git = "https://github.com/exo-tech-xyz/jito-solana", branch = "tj/v2.2.15-cache-logs" }
solana-banks-client = { package = "solana-banks-client", git = "https://github.com/exo-tech-xyz/jito-solana", branch = "tj/v2.2.15-cache-logs" }
solana-banks-interface = { package = "solana-banks-interface", git = "https://github.com/exo-tech-xyz/jito-solana", branch = "tj/v2.2.15-cache-logs" }
solana-banks-server = { package = "solana-banks-server", git = "https://github.com/exo-tech-xyz/jito-solana", branch = "tj/v2.2.15-cache-logs" }
solana-bench-tps = { package = "solana-bench-tps", git = "https://github.com/exo-tech-xyz/jito-solana", branch = "tj/v2.2.15-cache-logs" }
solana-bloom = { package = "solana-bloom", git = "https://github.com/exo-tech-xyz/jito-solana", branch = "tj/v2.2.15-cache-logs" }
solana-bpf-loader-program = { package = "solana-bpf-loader-program", git = "https://github.com/exo-tech-xyz/jito-solana", branch = "tj/v2.2.15-cache-logs" }
solana-bucket-map = { package = "solana-bucket-map", git = "https://github.com/exo-tech-xyz/jito-solana", branch = "tj/v2.2.15-cache-logs" }
solana-builtins-default-costs = { package = "solana-builtins-default-costs", git = "https://github.com/exo-tech-xyz/jito-solana", branch = "tj/v2.2.15-cache-logs" }
solana-clap-utils = { package = "solana-clap-utils", git = "https://github.com/exo-tech-xyz/jito-solana", branch = "tj/v2.2.15-cache-logs" }
solana-cli-config = { package = "solana-cli-config", git = "https://github.com/exo-tech-xyz/jito-solana", branch = "tj/v2.2.15-cache-logs" }
solana-client = { package = "solana-client", git = "https://github.com/exo-tech-xyz/jito-solana", branch = "tj/v2.2.15-cache-logs" }
solana-compute-budget = { package = "solana-compute-budget", git = "https://github.com/exo-tech-xyz/jito-solana", branch = "tj/v2.2.15-cache-logs" }
solana-config-program = { package = "solana-config-program", git = "https://github.com/exo-tech-xyz/jito-solana", branch = "tj/v2.2.15-cache-logs" }
solana-connection-cache = { package = "solana-connection-cache", git = "https://github.com/exo-tech-xyz/jito-solana", branch = "tj/v2.2.15-cache-logs" }
solana-core = { package = "solana-core", git = "https://github.com/exo-tech-xyz/jito-solana", branch = "tj/v2.2.15-cache-logs" }
solana-cost-model = { package = "solana-cost-model", git = "https://github.com/exo-tech-xyz/jito-solana", branch = "tj/v2.2.15-cache-logs" }
solana-curve25519 = { package = "solana-curve25519", git = "https://github.com/exo-tech-xyz/jito-solana", branch = "tj/v2.2.15-cache-logs" }
solana-entry = { package = "solana-entry", git = "https://github.com/exo-tech-xyz/jito-solana", branch = "tj/v2.2.15-cache-logs" }
solana-faucet = { package = "solana-faucet", git = "https://github.com/exo-tech-xyz/jito-solana", branch = "tj/v2.2.15-cache-logs" }
solana-fee = { package = "solana-fee", git = "https://github.com/exo-tech-xyz/jito-solana", branch = "tj/v2.2.15-cache-logs" }
solana-geyser-plugin-manager = { package = "solana-geyser-plugin-manager", git = "https://github.com/exo-tech-xyz/jito-solana", branch = "tj/v2.2.15-cache-logs" }
solana-gossip = { package = "solana-gossip", git = "https://github.com/exo-tech-xyz/jito-solana", branch = "tj/v2.2.15-cache-logs" }
solana-inline-spl = { package = "solana-inline-spl", git = "https://github.com/exo-tech-xyz/jito-solana", branch = "tj/v2.2.15-cache-logs" }
solana-lattice-hash = { package = "solana-lattice-hash", git = "https://github.com/exo-tech-xyz/jito-solana", branch = "tj/v2.2.15-cache-logs" }
solana-ledger = { package = "solana-ledger", git = "https://github.com/exo-tech-xyz/jito-solana", branch = "tj/v2.2.15-cache-logs" }
solana-loader-v4-program = { package = "solana-loader-v4-program", git = "https://github.com/exo-tech-xyz/jito-solana", branch = "tj/v2.2.15-cache-logs" }
solana-log-collector = { package = "solana-log-collector", git = "https://github.com/exo-tech-xyz/jito-solana", branch = "tj/v2.2.15-cache-logs" }
solana-measure = { package = "solana-measure", git = "https://github.com/exo-tech-xyz/jito-solana", branch = "tj/v2.2.15-cache-logs" }
solana-merkle-tree = { package = "solana-merkle-tree", git = "https://github.com/exo-tech-xyz/jito-solana", branch = "tj/v2.2.15-cache-logs" }
solana-metrics = { package = "solana-metrics", git = "https://github.com/exo-tech-xyz/jito-solana", branch = "tj/v2.2.15-cache-logs" }
solana-net-utils = { package = "solana-net-utils", git = "https://github.com/exo-tech-xyz/jito-solana", branch = "tj/v2.2.15-cache-logs" }
solana-perf = { package = "solana-perf", git = "https://github.com/exo-tech-xyz/jito-solana", branch = "tj/v2.2.15-cache-logs" }
solana-poh = { package = "solana-poh", git = "https://github.com/exo-tech-xyz/jito-solana", branch = "tj/v2.2.15-cache-logs" }
solana-poseidon = { package = "solana-poseidon", git = "https://github.com/exo-tech-xyz/jito-solana", branch = "tj/v2.2.15-cache-logs" }
solana-program-runtime = { package = "solana-program-runtime", git = "https://github.com/exo-tech-xyz/jito-solana", branch = "tj/v2.2.15-cache-logs" }
solana-program-test = { package = "solana-program-test", git = "https://github.com/exo-tech-xyz/jito-solana", branch = "tj/v2.2.15-cache-logs" }
solana-pubsub-client = { package = "solana-pubsub-client", git = "https://github.com/exo-tech-xyz/jito-solana", branch = "tj/v2.2.15-cache-logs" }
solana-quic-client = { package = "solana-quic-client", git = "https://github.com/exo-tech-xyz/jito-solana", branch = "tj/v2.2.15-cache-logs" }
solana-rayon-threadlimit = { package = "solana-rayon-threadlimit", git = "https://github.com/exo-tech-xyz/jito-solana", branch = "tj/v2.2.15-cache-logs" }
solana-remote-wallet = { package = "solana-remote-wallet", git = "https://github.com/exo-tech-xyz/jito-solana", branch = "tj/v2.2.15-cache-logs" }
solana-timings = { package = "solana-timings", git = "https://github.com/exo-tech-xyz/jito-solana", branch = "tj/v2.2.15-cache-logs" }
solana-unified-scheduler-logic = { package = "solana-unified-scheduler-logic", git = "https://github.com/exo-tech-xyz/jito-solana", branch = "tj/v2.2.15-cache-logs" }
solana-unified-scheduler-pool = { package = "solana-unified-scheduler-pool", git = "https://github.com/exo-tech-xyz/jito-solana", branch = "tj/v2.2.15-cache-logs" }
solana-rpc = { package = "solana-rpc", git = "https://github.com/exo-tech-xyz/jito-solana", branch = "tj/v2.2.15-cache-logs" }
solana-rpc-client = { package = "solana-rpc-client", git = "https://github.com/exo-tech-xyz/jito-solana", branch = "tj/v2.2.15-cache-logs" }
solana-rpc-client-api = { package = "solana-rpc-client-api", git = "https://github.com/exo-tech-xyz/jito-solana", branch = "tj/v2.2.15-cache-logs" }
solana-rpc-client-nonce-utils = { package = "solana-rpc-client-nonce-utils", git = "https://github.com/exo-tech-xyz/jito-solana", branch = "tj/v2.2.15-cache-logs" }
solana-runtime = { package = "solana-runtime", git = "https://github.com/exo-tech-xyz/jito-solana", branch = "tj/v2.2.15-cache-logs" }
solana-runtime-transaction = { package = "solana-runtime-transaction", git = "https://github.com/exo-tech-xyz/jito-solana", branch = "tj/v2.2.15-cache-logs" }
solana-send-transaction-service = { package = "solana-send-transaction-service", git = "https://github.com/exo-tech-xyz/jito-solana", branch = "tj/v2.2.15-cache-logs" }
solana-stake-program = { package = "solana-stake-program", git = "https://github.com/exo-tech-xyz/jito-solana", branch = "tj/v2.2.15-cache-logs" }
solana-storage-bigtable = { package = "solana-storage-bigtable", git = "https://github.com/exo-tech-xyz/jito-solana", branch = "tj/v2.2.15-cache-logs" }
solana-storage-proto = { package = "solana-storage-proto", git = "https://github.com/exo-tech-xyz/jito-solana", branch = "tj/v2.2.15-cache-logs" }
solana-streamer = { package = "solana-streamer", git = "https://github.com/exo-tech-xyz/jito-solana", branch = "tj/v2.2.15-cache-logs" }
solana-svm = { package = "solana-svm", git = "https://github.com/exo-tech-xyz/jito-solana", branch = "tj/v2.2.15-cache-logs" }
solana-svm-rent-collector = { package = "solana-svm-rent-collector", git = "https://github.com/exo-tech-xyz/jito-solana", branch = "tj/v2.2.15-cache-logs" }
solana-svm-transaction = { package = "solana-svm-transaction", git = "https://github.com/exo-tech-xyz/jito-solana", branch = "tj/v2.2.15-cache-logs" }
solana-system-program = { package = "solana-system-program", git = "https://github.com/exo-tech-xyz/jito-solana", branch = "tj/v2.2.15-cache-logs" }
solana-thin-client = { package = "solana-thin-client", git = "https://github.com/exo-tech-xyz/jito-solana", branch = "tj/v2.2.15-cache-logs" }
solana-tpu-client = { package = "solana-tpu-client", git = "https://github.com/exo-tech-xyz/jito-solana", branch = "tj/v2.2.15-cache-logs" }
solana-transaction-status = { package = "solana-transaction-status", git = "https://github.com/exo-tech-xyz/jito-solana", branch = "tj/v2.2.15-cache-logs" }
solana-transaction-status-client-types = { package = "solana-transaction-status-client-types", git = "https://github.com/exo-tech-xyz/jito-solana", branch = "tj/v2.2.15-cache-logs" }
solana-transaction-metrics-tracker = { package = "solana-transaction-metrics-tracker", git = "https://github.com/exo-tech-xyz/jito-solana", branch = "tj/v2.2.15-cache-logs" }
solana-turbine = { package = "solana-turbine", git = "https://github.com/exo-tech-xyz/jito-solana", branch = "tj/v2.2.15-cache-logs" }
solana-type-overrides = { package = "solana-type-overrides", git = "https://github.com/exo-tech-xyz/jito-solana", branch = "tj/v2.2.15-cache-logs" }
solana-udp-client = { package = "solana-udp-client", git = "https://github.com/exo-tech-xyz/jito-solana", branch = "tj/v2.2.15-cache-logs" }
solana-version = { package = "solana-version", git = "https://github.com/exo-tech-xyz/jito-solana", branch = "tj/v2.2.15-cache-logs" }
solana-vote = { package = "solana-vote", git = "https://github.com/exo-tech-xyz/jito-solana", branch = "tj/v2.2.15-cache-logs" }
solana-vote-program = { package = "solana-vote-program", git = "https://github.com/exo-tech-xyz/jito-solana", branch = "tj/v2.2.15-cache-logs" }
solana-wen-restart = { package = "solana-wen-restart", git = "https://github.com/exo-tech-xyz/jito-solana", branch = "tj/v2.2.15-cache-logs" }
solana-zk-elgamal-proof-program = { package = "solana-zk-elgamal-proof-program", git = "https://github.com/exo-tech-xyz/jito-solana", branch = "tj/v2.2.15-cache-logs" }
solana-zk-sdk = { package = "solana-zk-sdk", git = "https://github.com/exo-tech-xyz/jito-solana", branch = "tj/v2.2.15-cache-logs" }
solana-zk-token-proof-program = { package = "solana-zk-token-proof-program", git = "https://github.com/exo-tech-xyz/jito-solana", branch = "tj/v2.2.15-cache-logs" }
solana-zk-token-sdk = { package = "solana-zk-token-sdk", git = "https://github.com/exo-tech-xyz/jito-solana", branch = "tj/v2.2.15-cache-logs" }
