[workspace]
members = [
    #"cli",
    "clients/rust/jito_tip_router",
    "core",
    "gcp_uploader",
    #"integration_tests",
    "priority_fee_distribution_sdk",
    #"program",
    "shank_cli",
    "tip-router-operator-cli",
    "tip_distribution_sdk",
    "tip_payment_sdk",
]

resolver = "2"

[workspace.package]
version = "0.0.1"
authors = ["Jito Network Maintainers <support@jito.network>"]
repository = "https://github.com/jito-foundation/jito-tip-router"
homepage = "https://jito.network/"
license = "MIT OR Apache-2.0"
edition = "2021"
readme = "README.md"

[workspace.dependencies]
anchor-lang-idl = "0.1.2"
anyhow = "1.0.86"
assert_matches = "1.5.0"
base64 = "0.22.1"
borsh = { version = "1.5.7", features = ["derive"] }
bytemuck = { version = "1.16.3", features = ["min_const_generics"] }
cfg-if = "1.0.0"
chrono = "0.4.38"
clap = { version = "4.5.16", features = ["derive", "env", "cargo"] }
clap-markdown = { version = "0.1.4" }
clap_old = { package = "clap", version = "2.33.1" }
const_str_to_pubkey = "0.2.0"
dotenv = "0.15.0"
env_logger = "0.11.8"
envfile = "0.2.1"
fast-math = "0.1"
futures = "0.3.21"
getrandom = { version = "0.3.3", features = ["custom"] }
hex = "0.4.3"
home = "=0.5.11" # Custom for compatibility with rust 1.75
jito-account-traits-derive = { package = "jito-account-traits-derive", git = "https://github.com/jito-foundation/restaking", rev = "3c84d3a43c6dfb5bd7f759c9330bda910cd42939" }
jito-bytemuck = { package = "jito-bytemuck", git = "https://github.com/jito-foundation/restaking", rev = "3c84d3a43c6dfb5bd7f759c9330bda910cd42939" }
jito-jsm-core = { package = "jito-jsm-core", git = "https://github.com/jito-foundation/restaking", rev = "3c84d3a43c6dfb5bd7f759c9330bda910cd42939" }
jito-priority-fee-distribution-sdk = { path = "./priority_fee_distribution_sdk", version = "=0.0.1" }
jito-restaking-client = { package = "jito-restaking-client", git = "https://github.com/jito-foundation/restaking", rev = "3c84d3a43c6dfb5bd7f759c9330bda910cd42939" }
jito-restaking-core = { package = "jito-restaking-core", git = "https://github.com/jito-foundation/restaking", rev = "3c84d3a43c6dfb5bd7f759c9330bda910cd42939" }
jito-restaking-program = { package = "jito-restaking-program", git = "https://github.com/jito-foundation/restaking", rev = "3c84d3a43c6dfb5bd7f759c9330bda910cd42939", features = ["no-entrypoint"] }
jito-restaking-sdk = { package = "jito-restaking-sdk", git = "https://github.com/jito-foundation/restaking", rev = "3c84d3a43c6dfb5bd7f759c9330bda910cd42939" }
jito-tip-distribution-sdk = { path = "./tip_distribution_sdk", version = "=0.0.1" }
jito-tip-payment-sdk = { path = "./tip_payment_sdk", version = "=0.0.1" }
jito-tip-router-client = { path = "./clients/rust/jito_tip_router", version = "0.0.1" }
jito-tip-router-core = { path = "./core", version = "=0.0.1" }
#jito-tip-router-program = { path = "./program", version = "=0.0.1" }
jito-tip-router-shank-cli = { path = "./shank_cli", version = "=0.0.1" }
jito-vault-client = { package = "jito-vault-client", git = "https://github.com/jito-foundation/restaking", rev = "3c84d3a43c6dfb5bd7f759c9330bda910cd42939" }
jito-vault-core = { package = "jito-vault-core", git = "https://github.com/jito-foundation/restaking", rev = "3c84d3a43c6dfb5bd7f759c9330bda910cd42939" }
jito-vault-program = { package = "jito-vault-program", git = "https://github.com/jito-foundation/restaking", rev = "3c84d3a43c6dfb5bd7f759c9330bda910cd42939", features = ["no-entrypoint"] }
jito-vault-sdk = { package = "jito-vault-sdk", git = "https://github.com/jito-foundation/restaking", rev = "3c84d3a43c6dfb5bd7f759c9330bda910cd42939" }
log = "0.4.22"
matches = "0.1.10"
meta-merkle-tree = { path = "./meta_merkle_tree", version = "=0.0.1" }
num-derive = "0.4.2"
num-traits = "0.2.19"
proc-macro2 = "1.0.86"
quote = "1.0.36"
rand = "0.9.2"
serde = { version = "^1.0", features = ["derive"] }
serde-big-array = "0.5.1"
serde_json = "1.0.102"
serde_with = "3.9.0"
shank = "0.4.2"
shank_idl = "0.4.2"
solana-account-decoder = { package = "solana-account-decoder", git = "https://github.com/jito-foundation/jito-solana.git", rev = "e6a93c5d5b84e63f095c1413119e94c03e474d57" }
solana-account-info = { package = "solana-account-info", git = "https://github.com/jito-foundation/jito-solana.git", rev = "e6a93c5d5b84e63f095c1413119e94c03e474d57" }
solana-accounts-db = { package = "solana-accounts-db", git = "https://github.com/jito-foundation/jito-solana.git", rev = "e6a93c5d5b84e63f095c1413119e94c03e474d57" }
solana-clap-utils = { package = "solana-clap-utils", git = "https://github.com/jito-foundation/jito-solana.git", rev = "e6a93c5d5b84e63f095c1413119e94c03e474d57" }
solana-cli-config = { package = "solana-cli-config", git = "https://github.com/jito-foundation/jito-solana.git", rev = "e6a93c5d5b84e63f095c1413119e94c03e474d57" }
solana-commitment-config = "=3.0.0"
solana-compute-budget-interface = { version = "=3.0.0" }
solana-client = { package = "solana-client", git = "https://github.com/jito-foundation/jito-solana.git", rev = "e6a93c5d5b84e63f095c1413119e94c03e474d57" }
solana-clock = { package = "solana-clock", git = "https://github.com/jito-foundation/jito-solana.git", rev = "e6a93c5d5b84e63f095c1413119e94c03e474d57" }
solana-core = { package = "solana-core", git = "https://github.com/jito-foundation/jito-solana.git", rev = "e6a93c5d5b84e63f095c1413119e94c03e474d57" }
solana-decode-error = "=2.3.0"
solana-genesis-config = "=3.0.0"
solana-geyser-plugin-manager = { package = "solana-geyser-plugin-manager", git = "https://github.com/jito-foundation/jito-solana.git", rev = "e6a93c5d5b84e63f095c1413119e94c03e474d57" }
solana-gossip = { package = "solana-gossip", git = "https://github.com/jito-foundation/jito-solana.git", rev = "e6a93c5d5b84e63f095c1413119e94c03e474d57" }
solana-instruction = { package = "solana-instruction", git = "https://github.com/jito-foundation/jito-solana.git", rev = "e6a93c5d5b84e63f095c1413119e94c03e474d57" }
solana-ledger = { package = "solana-ledger", git = "https://github.com/jito-foundation/jito-solana.git", rev = "e6a93c5d5b84e63f095c1413119e94c03e474d57" }
solana-measure = { git = "https://github.com/jito-foundation/jito-solana.git", rev = "e6a93c5d5b84e63f095c1413119e94c03e474d57" }
solana-metrics = { package = "solana-metrics", git = "https://github.com/jito-foundation/jito-solana.git", rev = "e6a93c5d5b84e63f095c1413119e94c03e474d57" }
solana-program = { version = "3.0.0", default-features = false }
solana-program-entrypoint = "3.0.0"
solana-program-error = "=3.0.0"
solana-program-test = { package = "solana-program-test", git = "https://github.com/jito-foundation/jito-solana.git", rev = "e6a93c5d5b84e63f095c1413119e94c03e474d57" }
solana-pubkey = "=3.0.0"
solana-rpc = { git = "https://github.com/jito-foundation/jito-solana.git", rev = "e6a93c5d5b84e63f095c1413119e94c03e474d57" }
solana-rpc-client = { package = "solana-rpc-client", git = "https://github.com/jito-foundation/jito-solana.git", rev = "e6a93c5d5b84e63f095c1413119e94c03e474d57" }
solana-rpc-client-api = { git = "https://github.com/jito-foundation/jito-solana.git", rev = "e6a93c5d5b84e63f095c1413119e94c03e474d57" }
solana-runtime = { package = "solana-runtime", git = "https://github.com/jito-foundation/jito-solana.git", rev = "e6a93c5d5b84e63f095c1413119e94c03e474d57" }
solana-sdk = "=3.0.0"
solana-security-txt = "1.1.1"
solana-stake-program = { package = "solana-stake-program", git = "https://github.com/jito-foundation/jito-solana.git", rev = "e6a93c5d5b84e63f095c1413119e94c03e474d57" }
solana-stake-interface = { version = "2.0.1", features = ["sysvar"] }
solana-streamer = { git = "https://github.com/jito-foundation/jito-solana.git", rev = "e6a93c5d5b84e63f095c1413119e94c03e474d57" }
solana-transaction-status = { package = "solana-transaction-status", git = "https://github.com/jito-foundation/jito-solana.git", rev = "e6a93c5d5b84e63f095c1413119e94c03e474d57" }
solana-unified-scheduler-pool = { package = "solana-unified-scheduler-pool", git = "https://github.com/jito-foundation/jito-solana.git", rev = "e6a93c5d5b84e63f095c1413119e94c03e474d57" }
solana-vote = { package = "solana-vote", git = "https://github.com/jito-foundation/jito-solana.git", rev = "e6a93c5d5b84e63f095c1413119e94c03e474d57" }
#solana-zk-sdk = { package = "solana-zk-sdk", git = "https://github.com/jito-foundation/jito-solana.git", rev = "e6a93c5d5b84e63f095c1413119e94c03e474d57" }
#solana-zk-token-sdk = { package = "solana-zk-token-sdk", git = "https://github.com/jito-foundation/jito-solana.git", rev = "e6a93c5d5b84e63f095c1413119e94c03e474d57" }
spl-associated-token-account-interface = { version = "2.0.0" }
spl-math = { version = "0.3.0", features = ["no-entrypoint"] }
spl-memo-interface = "2.0.0"
spl-stake-pool = { version = "2.0.3", features = ["no-entrypoint"] }
spl-token-interface = { version = "2.0.0" }
spl-token-2022-interface = { version = "=2.0.0" }
solana-system-interface = { version = "2.0.0", features = ["bincode"] }
#switchboard-on-demand = "0.7.4"
syn = "2.0.72"
thiserror = "2.0.16"
tokio = { version = "1.47.1", features = ["full"] }

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

[patch.crates-io]
solana-account-decoder = { package = "solana-account-decoder", git = "https://github.com/jito-foundation/jito-solana.git", rev = "e6a93c5d5b84e63f095c1413119e94c03e474d57" }
solana-account-decoder-client-types = { package = "solana-account-decoder-client-types", git = "https://github.com/jito-foundation/jito-solana.git", rev = "e6a93c5d5b84e63f095c1413119e94c03e474d57" }
solana-accounts-db = { package = "solana-accounts-db", git = "https://github.com/jito-foundation/jito-solana.git", rev = "e6a93c5d5b84e63f095c1413119e94c03e474d57" }
solana-address-lookup-table-program = { package = "solana-address-lookup-table-program", git = "https://github.com/jito-foundation/jito-solana.git", rev = "902402111e031f6fa5b19081de5c4a70a328525d" }
solana-banks-client = { package = "solana-banks-client", git = "https://github.com/jito-foundation/jito-solana.git", rev = "e6a93c5d5b84e63f095c1413119e94c03e474d57" }
solana-banks-interface = { package = "solana-banks-interface", git = "https://github.com/jito-foundation/jito-solana.git", rev = "e6a93c5d5b84e63f095c1413119e94c03e474d57" }
solana-banks-server = { package = "solana-banks-server", git = "https://github.com/jito-foundation/jito-solana.git", rev = "e6a93c5d5b84e63f095c1413119e94c03e474d57" }
solana-bench-tps = { package = "solana-bench-tps", git = "https://github.com/jito-foundation/jito-solana.git", rev = "e6a93c5d5b84e63f095c1413119e94c03e474d57" }
solana-bloom = { package = "solana-bloom", git = "https://github.com/jito-foundation/jito-solana.git", rev = "e6a93c5d5b84e63f095c1413119e94c03e474d57" }
solana-bpf-loader-program = { package = "solana-bpf-loader-program", git = "https://github.com/jito-foundation/jito-solana.git", rev = "e6a93c5d5b84e63f095c1413119e94c03e474d57" }
solana-bucket-map = { package = "solana-bucket-map", git = "https://github.com/jito-foundation/jito-solana.git", rev = "e6a93c5d5b84e63f095c1413119e94c03e474d57" }
solana-builtins-default-costs = { package = "solana-builtins-default-costs", git = "https://github.com/jito-foundation/jito-solana.git", rev = "e6a93c5d5b84e63f095c1413119e94c03e474d57" }
solana-clap-utils = { package = "solana-clap-utils", git = "https://github.com/jito-foundation/jito-solana.git", rev = "e6a93c5d5b84e63f095c1413119e94c03e474d57" }
solana-cli-config = { package = "solana-cli-config", git = "https://github.com/jito-foundation/jito-solana.git", rev = "e6a93c5d5b84e63f095c1413119e94c03e474d57" }
solana-client = { package = "solana-client", git = "https://github.com/jito-foundation/jito-solana.git", rev = "e6a93c5d5b84e63f095c1413119e94c03e474d57" }
solana-compute-budget = { package = "solana-compute-budget", git = "https://github.com/jito-foundation/jito-solana.git", rev = "e6a93c5d5b84e63f095c1413119e94c03e474d57" }
solana-config-program = { package = "solana-config-program", git = "https://github.com/jito-foundation/jito-solana.git", rev = "902402111e031f6fa5b19081de5c4a70a328525d" }
solana-connection-cache = { package = "solana-connection-cache", git = "https://github.com/jito-foundation/jito-solana.git", rev = "e6a93c5d5b84e63f095c1413119e94c03e474d57" }
solana-core = { package = "solana-core", git = "https://github.com/jito-foundation/jito-solana.git", rev = "e6a93c5d5b84e63f095c1413119e94c03e474d57" }
solana-cost-model = { package = "solana-cost-model", git = "https://github.com/jito-foundation/jito-solana.git", rev = "e6a93c5d5b84e63f095c1413119e94c03e474d57" }
solana-curve25519 = { package = "solana-curve25519", git = "https://github.com/jito-foundation/jito-solana.git", rev = "e6a93c5d5b84e63f095c1413119e94c03e474d57" }
solana-entry = { package = "solana-entry", git = "https://github.com/jito-foundation/jito-solana.git", rev = "e6a93c5d5b84e63f095c1413119e94c03e474d57" }
solana-faucet = { package = "solana-faucet", git = "https://github.com/jito-foundation/jito-solana.git", rev = "e6a93c5d5b84e63f095c1413119e94c03e474d57" }
solana-fee = { package = "solana-fee", git = "https://github.com/jito-foundation/jito-solana.git", rev = "e6a93c5d5b84e63f095c1413119e94c03e474d57" }
solana-geyser-plugin-manager = { package = "solana-geyser-plugin-manager", git = "https://github.com/jito-foundation/jito-solana.git", rev = "e6a93c5d5b84e63f095c1413119e94c03e474d57" }
solana-gossip = { package = "solana-gossip", git = "https://github.com/jito-foundation/jito-solana.git", rev = "e6a93c5d5b84e63f095c1413119e94c03e474d57" }
solana-inline-spl = { package = "solana-inline-spl", git = "https://github.com/jito-foundation/jito-solana.git", rev = "902402111e031f6fa5b19081de5c4a70a328525d" }
solana-lattice-hash = { package = "solana-lattice-hash", git = "https://github.com/jito-foundation/jito-solana.git", rev = "e6a93c5d5b84e63f095c1413119e94c03e474d57" }
solana-ledger = { package = "solana-ledger", git = "https://github.com/jito-foundation/jito-solana.git", rev = "e6a93c5d5b84e63f095c1413119e94c03e474d57" }
solana-loader-v4-program = { package = "solana-loader-v4-program", git = "https://github.com/jito-foundation/jito-solana.git", rev = "e6a93c5d5b84e63f095c1413119e94c03e474d57" }
solana-measure = { package = "solana-measure", git = "https://github.com/jito-foundation/jito-solana.git", rev = "e6a93c5d5b84e63f095c1413119e94c03e474d57" }
solana-merkle-tree = { package = "solana-merkle-tree", git = "https://github.com/jito-foundation/jito-solana.git", rev = "e6a93c5d5b84e63f095c1413119e94c03e474d57" }
solana-metrics = { package = "solana-metrics", git = "https://github.com/jito-foundation/jito-solana.git", rev = "e6a93c5d5b84e63f095c1413119e94c03e474d57" }
solana-net-utils = { package = "solana-net-utils", git = "https://github.com/jito-foundation/jito-solana.git", rev = "e6a93c5d5b84e63f095c1413119e94c03e474d57" }
solana-perf = { package = "solana-perf", git = "https://github.com/jito-foundation/jito-solana.git", rev = "e6a93c5d5b84e63f095c1413119e94c03e474d57" }
solana-poh = { package = "solana-poh", git = "https://github.com/jito-foundation/jito-solana.git", rev = "e6a93c5d5b84e63f095c1413119e94c03e474d57" }
solana-poseidon = { package = "solana-poseidon", git = "https://github.com/jito-foundation/jito-solana.git", rev = "e6a93c5d5b84e63f095c1413119e94c03e474d57" }
solana-program-runtime = { package = "solana-program-runtime", git = "https://github.com/jito-foundation/jito-solana.git", rev = "e6a93c5d5b84e63f095c1413119e94c03e474d57" }
solana-program-test = { package = "solana-program-test", git = "https://github.com/jito-foundation/jito-solana.git", rev = "e6a93c5d5b84e63f095c1413119e94c03e474d57" }
solana-pubsub-client = { package = "solana-pubsub-client", git = "https://github.com/jito-foundation/jito-solana.git", rev = "e6a93c5d5b84e63f095c1413119e94c03e474d57" }
solana-quic-client = { package = "solana-quic-client", git = "https://github.com/jito-foundation/jito-solana.git", rev = "e6a93c5d5b84e63f095c1413119e94c03e474d57" }
solana-rayon-threadlimit = { package = "solana-rayon-threadlimit", git = "https://github.com/jito-foundation/jito-solana.git", rev = "e6a93c5d5b84e63f095c1413119e94c03e474d57" }
solana-remote-wallet = { package = "solana-remote-wallet", git = "https://github.com/jito-foundation/jito-solana.git", rev = "e6a93c5d5b84e63f095c1413119e94c03e474d57" }
#solana-timings = { package = "solana-timings", git = "https://github.com/jito-foundation/jito-solana.git", rev = "e6a93c5d5b84e63f095c1413119e94c03e474d57" }
solana-unified-scheduler-logic = { package = "solana-unified-scheduler-logic", git = "https://github.com/jito-foundation/jito-solana.git", rev = "e6a93c5d5b84e63f095c1413119e94c03e474d57" }
solana-unified-scheduler-pool = { package = "solana-unified-scheduler-pool", git = "https://github.com/jito-foundation/jito-solana.git", rev = "e6a93c5d5b84e63f095c1413119e94c03e474d57" }
solana-rpc = { package = "solana-rpc", git = "https://github.com/jito-foundation/jito-solana.git", rev = "e6a93c5d5b84e63f095c1413119e94c03e474d57" }
solana-rpc-client = { package = "solana-rpc-client", git = "https://github.com/jito-foundation/jito-solana.git", rev = "e6a93c5d5b84e63f095c1413119e94c03e474d57" }
solana-rpc-client-api = { package = "solana-rpc-client-api", git = "https://github.com/jito-foundation/jito-solana.git", rev = "e6a93c5d5b84e63f095c1413119e94c03e474d57" }
solana-rpc-client-nonce-utils = { package = "solana-rpc-client-nonce-utils", git = "https://github.com/jito-foundation/jito-solana.git", rev = "e6a93c5d5b84e63f095c1413119e94c03e474d57" }
solana-runtime = { package = "solana-runtime", git = "https://github.com/jito-foundation/jito-solana.git", rev = "e6a93c5d5b84e63f095c1413119e94c03e474d57" }
solana-runtime-transaction = { package = "solana-runtime-transaction", git = "https://github.com/jito-foundation/jito-solana.git", rev = "e6a93c5d5b84e63f095c1413119e94c03e474d57" }
solana-send-transaction-service = { package = "solana-send-transaction-service", git = "https://github.com/jito-foundation/jito-solana.git", rev = "e6a93c5d5b84e63f095c1413119e94c03e474d57" }
solana-stake-program = { package = "solana-stake-program", git = "https://github.com/jito-foundation/jito-solana.git", rev = "e6a93c5d5b84e63f095c1413119e94c03e474d57" }
solana-storage-bigtable = { package = "solana-storage-bigtable", git = "https://github.com/jito-foundation/jito-solana.git", rev = "e6a93c5d5b84e63f095c1413119e94c03e474d57" }
solana-storage-proto = { package = "solana-storage-proto", git = "https://github.com/jito-foundation/jito-solana.git", rev = "e6a93c5d5b84e63f095c1413119e94c03e474d57" }
solana-streamer = { package = "solana-streamer", git = "https://github.com/jito-foundation/jito-solana.git", rev = "e6a93c5d5b84e63f095c1413119e94c03e474d57" }
solana-svm = { package = "solana-svm", git = "https://github.com/jito-foundation/jito-solana.git", rev = "e6a93c5d5b84e63f095c1413119e94c03e474d57" }
#solana-svm-rent-collector = { package = "solana-svm-rent-collector", git = "https://github.com/jito-foundation/jito-solana.git", rev = "e6a93c5d5b84e63f095c1413119e94c03e474d57" }
solana-svm-transaction = { package = "solana-svm-transaction", git = "https://github.com/jito-foundation/jito-solana.git", rev = "e6a93c5d5b84e63f095c1413119e94c03e474d57" }
solana-system-program = { package = "solana-system-program", git = "https://github.com/jito-foundation/jito-solana.git", rev = "e6a93c5d5b84e63f095c1413119e94c03e474d57" }
#solana-thin-client = { package = "solana-thin-client", git = "https://github.com/jito-foundation/jito-solana.git", rev = "e6a93c5d5b84e63f095c1413119e94c03e474d57" }
solana-tpu-client = { package = "solana-tpu-client", git = "https://github.com/jito-foundation/jito-solana.git", rev = "e6a93c5d5b84e63f095c1413119e94c03e474d57" }
solana-transaction-status = { package = "solana-transaction-status", git = "https://github.com/jito-foundation/jito-solana.git", rev = "e6a93c5d5b84e63f095c1413119e94c03e474d57" }
solana-transaction-status-client-types = { package = "solana-transaction-status-client-types", git = "https://github.com/jito-foundation/jito-solana.git", rev = "e6a93c5d5b84e63f095c1413119e94c03e474d57" }
solana-transaction-metrics-tracker = { package = "solana-transaction-metrics-tracker", git = "https://github.com/jito-foundation/jito-solana.git", rev = "e6a93c5d5b84e63f095c1413119e94c03e474d57" }
solana-turbine = { package = "solana-turbine", git = "https://github.com/jito-foundation/jito-solana.git", rev = "e6a93c5d5b84e63f095c1413119e94c03e474d57" }
#solana-type-overrides = { package = "solana-type-overrides", git = "https://github.com/jito-foundation/jito-solana.git", rev = "e6a93c5d5b84e63f095c1413119e94c03e474d57" }
solana-udp-client = { package = "solana-udp-client", git = "https://github.com/jito-foundation/jito-solana.git", rev = "e6a93c5d5b84e63f095c1413119e94c03e474d57" }
solana-version = { package = "solana-version", git = "https://github.com/jito-foundation/jito-solana.git", rev = "e6a93c5d5b84e63f095c1413119e94c03e474d57" }
solana-vote = { package = "solana-vote", git = "https://github.com/jito-foundation/jito-solana.git", rev = "e6a93c5d5b84e63f095c1413119e94c03e474d57" }
solana-vote-program = { package = "solana-vote-program", git = "https://github.com/jito-foundation/jito-solana.git", rev = "e6a93c5d5b84e63f095c1413119e94c03e474d57" }
solana-wen-restart = { package = "solana-wen-restart", git = "https://github.com/jito-foundation/jito-solana.git", rev = "e6a93c5d5b84e63f095c1413119e94c03e474d57" }
solana-zk-elgamal-proof-program = { package = "solana-zk-elgamal-proof-program", git = "https://github.com/jito-foundation/jito-solana.git", rev = "e6a93c5d5b84e63f095c1413119e94c03e474d57" }
#solana-zk-sdk = { package = "solana-zk-sdk", git = "https://github.com/jito-foundation/jito-solana.git", rev = "e6a93c5d5b84e63f095c1413119e94c03e474d57" }
#solana-zk-token-proof-program = { package = "solana-zk-token-proof-program", git = "https://github.com/jito-foundation/jito-solana.git", rev = "e6a93c5d5b84e63f095c1413119e94c03e474d57" }
#solana-zk-token-sdk = { package = "solana-zk-token-sdk", git = "https://github.com/jito-foundation/jito-solana.git", rev = "e6a93c5d5b84e63f095c1413119e94c03e474d57" }
